# lib/api-spec/openapi.yaml
@@ -623,7 +623,7 @@ components:
 
     AuthUser:
       type: object
-      required: [id, email, firstName, lastName, profileImageUrl]
+      required: [id, email, firstName, lastName, profileImageUrl, isAdmin]
       properties:
         id:
           type: string
@@ -636,6 +636,9 @@ components:
           type: [string, "null"]
         profileImageUrl:
           type: [string, "null"]
+        isAdmin:
+          type: boolean
+
     AuthUserEnvelope:
       type: object
       required: [user]
